fix colurs of dark mode

--- a/css/base.css
+++ b/css/base.css
@@ -30,8 +30,8 @@ body {
 
 .header {
     text-align: center;
-    margin: 2rem 0 3rem 0;
-    padding: 0 1rem;
+    margin: 2rem 0 4rem 0;
+    padding: 0 2rem;
 }
 
 .header h1 {
